--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive card details form</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -16,39 +17,62 @@
 </head>
 <body>
   <div class="container">
-    <div class="left"></div>
-    <div class="right"></div>
+    <div class="left">
+      
+        <div class="card-front">
+          <span class="card-logo"><img src="images/card-logo.svg"  alt=""></span>
+          <span class="card-number" id="card-number">11 ewr2343252 b</span>
+          <span class="card-name" id="card-name">name</span>
+          <span class="expaire">tt</span>
+          <img src="/images/bg-card-front.png"class="credit" alt="image of front card">
+        </div>
+        <div class="card-back">
+          <span class="cvc-one" >000</span>
+          <img src="/images/bg-card-back.png" class="credit" alt="image of back card" >
+        </div>
+      
+    </div>
+    <div class="right">
+      <form action="#">
+          <label for="name" class="text">CARDHOLDER NAME</label>
+          <br>
+          <input type="text" id="name" placeholder="Teklit Gebrerufeal">
+          <br>
+          <label for="num" class="text">CARD NUMBER</label>
+          <br>
+          <input type="text" placeholder="1234 5678 9123 0000" id="number">
+          <span id="nan"></span>
+          <div class="cvc-and-exp">
+            <div class="exp">
+              <div class="a">
+                <label for="momth">EXP.DATE(MM/YY)</label>
+                <div class="one">
+                  <input type="text" id="month">
+                  <input type="text" id="year">
+                </div>
+              </div>
+            </div>
+            <div class="cvc">
+              <label for="cvc">CVC</label>
+              <input type="text" id="cvc">
+            </div>
+          </div>
+          <input type="button" value="Confirm">
+          <div class="complete">
+            <img src="images/icon-complete.svg" alt="">
+            <h1> Thank you!</h1>
+            <p>We've added your card details</p>
+            <input type="button" value="Continue">
+          </div>
+      </form>
+    </div>
   </div>
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-
   <!-- Completed state start -->
-
-  Thank you!
-  We've added your card details
-  Continue
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Teklit G. HAileslasse</a>.
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
